fixed horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -128,6 +128,10 @@ header {
 .container-aboutMe {
   position: relative;
 }
+.picture-green {
+  width: 100vw;
+  max-width: 100vw;
+}
 #aboutMe h1 {
   text-align: left;
   font-size: 6em;
@@ -153,6 +157,7 @@ header {
   font-size: 3em;
   margin: auto;
   max-width: 80vw;
+  margin-top: 20px;
 }
 .aboutMe-p {
   text-align: left;
@@ -222,6 +227,8 @@ a:hover {
   top: 300px;
   left: 50%;
   transform: translateX(-50%);
+  width: 100%;
+  padding-left: 40px;
 }
 
 /* -------SKILLS page styling--------------------- */
@@ -302,7 +309,7 @@ li {
 
 .card-main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 25%));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 20%));
     align-items: center;
     grid-gap: 40px;
     min-height: 50vh;
@@ -385,6 +392,30 @@ li {
 #img-api {
   background-image: url("api1.jpg");
 }
+@media (max-width: 1680px) {
+  #aboutMe h1 {
+    margin-left: 40px;
+    font-size: 4rem;
+  }
+  #contacts h1 {
+    margin-bottom: 0;
+    font-size: 4em;
+  }
+  #contacts h2 {
+    margin: 15px;
+  }
+  .info-mail-p {
+    margin: 20px;
+    font-size: 1rem;
+  }
+  .info-phone-p {
+    margin: 20px;
+    font-size: 1rem;
+  }
+  .contacts-div {
+    top: 150px
+  }
+}
 @media (max-width: 1024px) {
   .card {
     transform: scale(1.05);
@@ -408,8 +439,7 @@ li {
     top: 150px;
   }
   #contacts h1 {
-    font-size: 2rem;
-    margin: 0;
+   display: none;
   }
   #contacts h2 {
     font-size: 2rem;
@@ -426,6 +456,14 @@ li {
   .phone-icon, .mail-icon {
     height: 30px;
   }
+  #aboutMe h1 {
+    margin-left: 0;
+    padding: 20px;
+    font-size: 3rem;
+  }
+  #aboutMe h2 {
+    font-size: 3rem;
+  }
 }
 @media (max-width: 600px) {
   .skills-div {
@@ -437,7 +475,7 @@ li {
   #aboutMe h1 {
     margin-left: 0;
     padding: 20px;
-    font-size: 4rem;
+    font-size: 2rem;
   }
   .aboutMe-p {
     max-width: 600px;
@@ -448,8 +486,12 @@ li {
     max-width: 600px;
     margin-left: 0;
     margin: auto;
+    font-size: 2rem;
   }
   .contacts-div {
     top: 100px;
+  }
+  #contacts h2 {
+    font-size: 1rem;
   }
 }
